# taser

./: .env  .gitignore  CMakeLists.txt  README.md  install.bash  pyproject.toml  rosdep.yaml
.devcontainer/: Dockerfile  Dockerfile.isaaclab  Dockerfile.ros-jazzy  compose.yaml  devcontainer.json  install_ros2.bash  post_create.bash  utils.bash
arm_controller/: CMakeLists.txt  package.xml
arm_controller/include/arm_controller/: arm.hpp  arm_kinematics.hpp  controller.hpp  ik_solver.hpp  ros_interface.hpp  ros_node.hpp  transform_listener.hpp  types.hpp
arm_controller/src/: arm.cpp  arm_controller_node.cpp  arm_kinematics.cpp  controller.cpp  ik_solver.cpp  ik_solver.py  main.cpp  ros_interface.cpp  ros_node.cpp  transform_listener.cpp
base_controller/: CMakeLists.txt  package.xml
core/: CMakeLists.txt  package.xml
core/include/wheeled_humanoid/: base_controller.hpp  base_kinematics.hpp  robot.hpp  rrt_path_planner.hpp  types.hpp
core/include/wheeled_humanoid/arm/: controller.hpp  kinematics.hpp
core/include/wheeled_humanoid/base/: controller.hpp  geometry.hpp  kinematics.hpp  path_planner.hpp  utils.hpp
core/src/: arm_controller.cpp  arm_kinematics.cpp  base_controller.cpp  base_kinematics.cpp  robot.cpp  rrt_path_planner.cpp
core/src/arm/: controller.cpp  kinematics.cpp
core/src/base/: controller.cpp  geometry.cpp  kinematics.cpp  path_planner.cpp  utils.cpp
core/test/: base_control_test.cpp  path_planner_test.cpp  rrt_path_planner_test.cpp
core_py/: CMakeLists.txt  package.xml
core_py/src/: bindings.cpp
core_py/wheeled_humanoid/: __init__.py  base_controller.py  base_controller_visualizer.py  rrt_visualizer.py
core_py/wheeled_humanoid/arm/: __init__.py
core_py/wheeled_humanoid/base/: __init__.py  py_controller.py
core_py/wheeled_humanoid/visualization/base/: controller.py  dubins.py  path_planner.py
core_py/wheeled_humanoid_py/base/: controller.py
core_py/wheeled_humanoid_py/visualization/base/: controller.py  dubins.py  path_planner.py
core_ros/: CMakeLists.txt  package.xml
core_ros/config/: config.rviz  parameters.yaml
core_ros/include/wheeled_humanoid_ros/: ros_node.hpp
core_ros/launch/: robot.launch.yaml
core_ros/src/: ros_node.cpp
core_ros/urdf/: arm.xacro  robot.urdf.xacro
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: controller_manager.yaml
robot_description/launch/: rviz.launch.py  rviz_control.launch.py  rviz_viewer.launch.py
robot_description/src/urdf/: arm.xacro  base.xacro  robot.urdf.xacro  wheel.xacro
robot_description/urdf/: arm.xacro  base.xacro  robot.urdf.xacro  ros2_control.xacro  wheel.xacro
robot_description/xacro/: arm.xacro  robot.urdf.xacro  wheel.xacro
robot_launcher/: CMakeLists.txt  package.xml
robot_launcher/launch/: robot.launch.py
src/core/: package.xml
src/core/include/wheeled_humanoid/: types.hpp
src/core/include/wheeled_humanoid/arm/: kinematics.hpp
src/core/include/wheeled_humanoid/base/: controller.hpp  geometry.hpp
src/core/src/: robot.cpp
src/core/src/arm/: kinematics.cpp
src/core/src/base/: controller.cpp  kinematics.cpp  path_planner.cpp
src/core/test/: path_planner_test.cpp
src/core_py/: CMakeLists.txt
src/core_py/src/: bindings.cpp
src/core_py/wheeled_humanoid_py/base/: controller.py
src/core_py/wheeled_humanoid_py/visualization/base/: dubins.py  path_planner.py
src/msgs/: package.xml
src/msgs/action/: MoveArms.action
src/ros_ws/src/state_machine/: CMakeLists.txt
src/ros_ws/src/state_machine/include/state_machine/states/: move_arms.hpp
src/ros_ws/src/state_machine/src/states/: move_base.cpp
src/ros_ws/src/taser_msgs/: CMakeLists.txt
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/include/state_machine/: ros_node.hpp
src/state_machine/include/state_machine/states/: move_base.hpp
src/state_machine/launch/: state_machine.launch.yaml
src/state_machine/src/: ros_node.cpp
src/state_machine/src/states/: idle.cpp
src/taser_py/: CMakeLists.txt  package.xml
src/taser_py/src/: bindings.cpp
src/taser_py/taser_py/base/: controller.py
src/taser_py/taser_py/visualization/base/: controller.py  dubins.py  path_planner.py
src/taser_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/taser_ros/config/: config.rviz  controller_manager.yaml  parameters.yaml  sim_parameters.yaml
src/taser_ros/include/taser_ros/: ros_node.hpp
src/taser_ros/launch/: rviz.launch.yaml  rviz_control.launch.yaml  sim.launch.yaml
src/taser_ros/robot_description/urdf/: robot.urdf  taser.urdf
src/taser_ros/robot_description/urdf/xacro/: arm.xacro  base.xacro  robot.urdf.xacro  ros2_control.xacro  wheel.xacro
src/taser_ros/robot_description/usd/: taser.usd
src/taser_ros/robot_description/usd/configuration/: taser_base.usd  taser_physics.usd  taser_sensor.usd
src/taser_ros/src/: ros_node.cpp
src/taser_ros/src/taser_ros/: cmd_gui.py  parameters.py  ros_node.py  sim.py
src/taser_ros/src/taser_ros/cpp/: ros_node.cpp  ros_node.hpp
src/taser_ros/urdf/: robot.urdf
state_machine/: CMakeLists.txt  package.xml
state_machine/include/state_machine/: ros_node.hpp  state.hpp  state_machine.hpp  types.hpp
state_machine/include/state_machine/states/: grab.hpp  idle.hpp  lift.hpp  move.hpp  move_arms.hpp  move_base.hpp  state.hpp  wave.hpp
state_machine/launch/: state_machine.launch.py  state_machine.launch.yaml
state_machine/src/: main.cpp  ros_node.cpp  state_machine.cpp
state_machine/src/states/: grab.cpp  idle.cpp  lift.cpp  move.cpp  move_arms.cpp  move_base.cpp  wave.cpp
wheeled_humanoid/: CMakeLists.txt  package.xml
wheeled_humanoid/include/wheeled_humanoid/: arm_controller.hpp  arm_kinematics.hpp  base_controller.hpp  base_kinematics.hpp  robot.hpp  rrt_path_planner.hpp  types.hpp
wheeled_humanoid/src/: arm_kinematics.cpp  base_controller.cpp  base_kinematics.cpp  robot.cpp  rrt_path_planner.cpp
wheeled_humanoid/test/: base_control_test.cpp  rrt_path_planner_test.cpp
wheeled_humanoid_msgs/: CMakeLists.txt  package.xml
wheeled_humanoid_msgs/action/: MoveArms.action
(+295 files in other folders)
