[project]
name = "taser"
version = "0.1.0"
description = "A wheeled robot with two arms that detects targets in an environment and moves towards them to catch them."
authors = [{ "name" = "Khaled Jalloul", email = "khaled.jalloul@hotmail.com" }]

dependencies = [
    "cvxpy==1.4.2",
    "dotenv",
    "matplotlib",
    "numpy==1.24.0",
    "onnxruntime",
    # "open3d",
    "pybind11",
    "pyqt6",
    "roboticstoolbox-python==1.1.1",
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/taser"]
cmake.source-dir = "src/taser_cpp"

[tool.ruff]
select = [
    "I", # Import order & style
    "F", # Unused imports, undefined vars, etc.
]

[tool.pyright]
typeCheckingMode = "off"
reportUnusedImport = false # Already handled by ruff

extraPaths = [
    # System site-packages
    "/usr/local/lib/python3.10/dist-packages",
    # Isaac Lab
    "/workspace/isaaclab/source/isaaclab_tasks",
    "/workspace/isaaclab/source/isaaclab_assets",
    "/workspace/isaaclab/source/isaaclab_rl",
    "/workspace/isaaclab/source/isaaclab",
    "/workspace/isaaclab/source/isaaclab_mimic",
    # Isaac Sim
    "/isaac-sim/extscache/omni.graph.action_nodes-1.40.1+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.settings-1.2.2+d02c707b",
    "/isaac-sim/extscache/omni.kit.streamsdk.plugins-6.2.2+106.2.0.lx64.r",
    "/isaac-sim/extscache/omni.physx.foundation-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.stage_templates-1.2.6+d02c707b",
    "/isaac-sim/extscache/omni.kit.window.filepicker-2.11.7+d02c707b",
    "/isaac-sim/extscache/omni.kit.audiodeviceenum-1.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.appwindow-1.1.9+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.graph.nodes-1.162.1+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.index.libs-380600.1777.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.widget.searchfield-1.1.8+d02c707b",
    "/isaac-sim/extscache/omni.ujitso.client-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.test-1.1.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.index-1.0.1+d02c707b.lx64.r",
    "/isaac-sim/extscache/isaacsim.core.version-2.0.2",
    "/isaac-sim/extscache/omni.kit.usd.mdl-1.0.7+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.ujitso.processor.texture-1.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.warp.core-1.5.1+lx64",
    "/isaac-sim/extscache/omni.services.livestream.nvcf-6.3.0+106.2.0",
    "/isaac-sim/extscache/isaacsim.core.api-4.2.17+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.usd.config-1.0.5+d02c707b",
    "/isaac-sim/extscache/omni.kit.widget.options_menu-1.1.6+d02c707b",
    "/isaac-sim/extscache/omni.timeline-1.0.11+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.numpy.common-0.1.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.hydra.scene_api-0.1.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.graph-1.12.17+d02c707b",
    "/isaac-sim/extscache/omni.activity.core-1.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.actions.core-1.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.usd.schema.omnigraph-1.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.viewport.window-107.0.8+d02c707b",
    "/isaac-sim/extscache/omni.kit.exec.core-0.13.4+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.options_button-1.0.3+d02c707b",
    "/isaac-sim/extscache/isaacsim.core.cloner-1.3.4+106.5.0",
    "/isaac-sim/extscache/omni.graph.action_core-1.1.7+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.loop-isaac-1.2.0+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/isaacsim.core.utils-2.2.8+106.5.0.lx64",
    "/isaac-sim/extscache/omni.kvdb-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.graph.delegate.default-1.2.2",
    "/isaac-sim/extscache/omni.services.facilities.base-1.0.4",
    "/isaac-sim/extscache/omni.kit.widget.nucleus_connector-1.1.10+d02c707b",
    "/isaac-sim/extscache/usdrt.scenegraph-7.5.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.client-1.2.2+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.hydra_texture-1.4.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.stats-1.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.pip.cloud-1.1.7+106.5.0.lx64.cp310",
    "/isaac-sim/extscache/omni.kit.primitive.mesh-1.0.17+d02c707b",
    "/isaac-sim/extscache/omni.kit.telemetry-0.5.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/isaacsim.core.deprecation_manager-0.2.2",
    "/isaac-sim/extscache/omni.graph.core-2.181.8+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.ujitso.default-1.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.usd.schema.anim-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.graph-1.140.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.graph.tools-1.79.1+d02c707b",
    "/isaac-sim/extscache/omni.pip.compute-1.4.5+106.5.0.lx64.cp310",
    "/isaac-sim/extscache/omni.usd.schema.geospatial-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/isaacsim.core.simulation_manager-0.3.4+lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.viewport-107.0.7+d02c707b",
    "/isaac-sim/extscache/omni.kit.livestream.webrtc-6.0.0+106.2.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.window.preferences-1.7.0+d02c707b",
    "/isaac-sim/extscache/omni.kit.menu.core-1.1.2+d02c707b",
    "/isaac-sim/extscache/omni.kit.widget.filebrowser-2.10.52+d02c707b",
    "/isaac-sim/extscache/omni.graph.image.core-0.6.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.iray.libs-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.hydra.scene_delegate-0.3.3+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.mdl-55.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.physx-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.graph.editor.core-1.5.3",
    "/isaac-sim/extscache/omni.hsscclient-1.1.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.inspect-1.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.window.material_graph-1.8.19",
    "/isaac-sim/extscache/omni.usd.schema.audio-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.assets.plugins-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.graph.action-1.120.0+106.5.0",
    "/isaac-sim/extscache/omni.physics.tensors-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.hotkeys.core-1.3.10+d02c707b",
    "/isaac-sim/extscache/omni.hydra.rtx.shadercache.vulkan-1.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.usd.schema.semantics-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.stage_template.core-1.1.22+d02c707b",
    "/isaac-sim/extscache/omni.usd_resolver-1.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.stage-2.11.6+d02c707b",
    "/isaac-sim/extscache/omni.metrics.core-0.0.1+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.graph.exec-0.9.4+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.widget.material_preview-1.0.16",
    "/isaac-sim/extscache/omni.graph.image.nodes-1.3.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.convexdecomposition-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/isaacsim.storage.native-1.0.6+106.5.0",
    "/isaac-sim/extscache/omni.hydra.rtx-1.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.physx.stageupdate-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.isaac.core_archive-2.3.3+106.5.0.lx64.cp310",
    "/isaac-sim/extscache/omni.warp-1.5.1",
    "/isaac-sim/extscache/omni.kit.viewport.utility-1.0.18+d02c707b",
    "/isaac-sim/extscache/omni.replicator.core-1.11.35+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/isaacsim.core.prims-0.3.7+106.5.0",
    "/isaac-sim/extscache/omni.isaac.ml_archive-2.1.2+106.5.0.lx64.cp310",
    "/isaac-sim/extscache/omni.kit.clipboard-1.0.5+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.graph.usd.commands-1.3.1",
    "/isaac-sim/extscache/omni.kit.renderer.init-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.window.popup_dialog-2.0.24+d02c707b",
    "/isaac-sim/extscache/omni.ui.scene-1.11.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.usd.libs-1.0.1+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.renderer.capture-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.path_field-2.0.11+d02c707b",
    "/isaac-sim/extscache/isaacsim.simulation_app-2.4.2+106.5.0",
    "/isaac-sim/extscache/omni.hydra.engine.stats-1.0.3+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.datastore-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.physx.fabric-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.physx.cooking-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.gpu_foundation.shadercache.vulkan-1.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.usd.core-1.4.2+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.kit.widget.browser_bar-2.0.10+d02c707b",
    "/isaac-sim/extscache/omni.services.core-1.9.0",
    "/isaac-sim/extscache/omni.kit.pipapi-0.0.0+d02c707b",
    "/isaac-sim/extscache/omni.usd-1.12.4+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.usd.layers-2.2.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.menu.utils-1.7.7+d02c707b",
    "/isaac-sim/extscache/omni.mdl.neuraylib-0.2.10+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.filter-1.1.4+d02c707b",
    "/isaac-sim/extscache/omni.kit.window.file_exporter-1.0.31+d02c707b",
    "/isaac-sim/extscache/omni.physx.tensors-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.renderer.imgui-1.0.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.graph.scriptnode-1.40.1+106.5.0",
    "/isaac-sim/extscache/omni.isaac.dynamic_control-1.3.16+106.5.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.usdphysics-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.kit.viewport.rtx-104.0.1+d02c707b",
    "/isaac-sim/extscache/omni.services.transport.server.base-1.1.1",
    "/isaac-sim/extscache/carb.audio-0.1.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.services.transport.server.http-1.3.1",
    "/isaac-sim/extscache/omni.kit.viewport.registry-104.0.6+d02c707b",
    "/isaac-sim/extscache/omni.kit.usd_undo-0.1.8+d02c707b",
    "/isaac-sim/extscache/omni.kit.helper.file_utils-0.1.9+d02c707b",
    "/isaac-sim/extscache/carb.windowing.plugins-1.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.usd.schema.physx-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/isaac-sim/extscache/omni.syntheticdata-0.6.10+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.material.library-1.5.15+d02c707b",
    "/isaac-sim/extscache/omni.gpucompute.plugins-0.0.0+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.blobkey-1.1.2+d02c707b.lx64.r",
    "/isaac-sim/extscache/omni.volume-0.5.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.context_menu-1.8.3+d02c707b",
    "/isaac-sim/extscache/omni.kit.livestream.core-6.1.0+106.2.0.lx64.r.cp310",
    "/isaac-sim/extscache/omni.gpu_foundation-0.0.0+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.ui-2.26.5+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.materialx.libs-1.0.6+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.widget.context_menu-1.2.4+d02c707b",
    "/isaac-sim/extscache/omni.kit.notification_manager-1.0.9+d02c707b",
    "/isaac-sim/extscache/omni.kit.commands-1.4.9+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.renderer.core-1.0.2+d02c707b.lx64.r.cp310",
    "/isaac-sim/extscache/omni.kit.pip_archive-0.0.0+d02c707b.lx64.cp310",
    "/isaac-sim/extscache/omni.localcache-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.menu.create-41fdf81142aa08d9",
    "/root/.local/share/ov/data/exts/v2/isaacsim.cortex.behaviors-2.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.render-a9304054657ac7d5",
    "/root/.local/share/ov/data/exts/v2/omni.usd.schema.metrics.assembler-106.5.0+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.util.debug_draw-2.0.3+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.policy.examples-4.0.3",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.lidar-2.6.3-coreapi+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.uiapp-bae3f5b4dc7a4b6b",
    "/root/.local/share/ov/data/exts/v2/isaacsim.sensors.rtx-13.6.4+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.wheeled_robots-3.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.replicator.domain_randomization-1.0.2+lx64",
    "/root/.local/share/ov/data/exts/v2/urls",
    "/root/.local/share/ov/data/exts/v2/semantics.schema.property-1.0.5",
    "/root/.local/share/ov/data/exts/v2/omni.usd.schema.isaac-3.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.replicator.behavior-1.0.8",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.camera-ad72aefa7d4d3398",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.quadruped-3.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.graph.ui_nodes-1.40.1+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.selector-aea3b4cfe39d0563",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.manipulator.transform-856b7955ea877da8",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.transform-54f96424709e0ae4",
    "/root/.local/share/ov/data/exts/v2/semantics.schema.editor-0.3.10",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.importer.mjcf-2.3.7+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.property-2a8152c14b6fdc79",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.assets_check-0.3.9",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.universal_robots-1.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.transform-c3c9d0e9030c8667",
    "/root/.local/share/ov/data/exts/v2/omni.replicator.isaac-2.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.manipulators-3.0.4+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.drop_support-defc078e9ebfb13b",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.sensor-13.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot_motion.lula-4.0.4+106.5.0.lx64.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.ros2.bridge-4.1.15+106.5.0.lx64",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.zoombar-1.0.5",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.window.about-2.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.stage_icons-9870d3727ca281ab",
    "/root/.local/share/ov/data/exts/v2/isaacsim.sensors.camera-0.2.9+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.rtx.settings.core-5dec07760e6eda0e",
    "/root/.local/share/ov/data/exts/v2/omni.physx.camera-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.browser-1.3.4",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.legacy_gizmos-407b580b3d168e3a",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.prim.usd-f65d1111b5cb9a6f",
    "/root/.local/share/ov/data/exts/v2/omni.physx.cct-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.asset_browser-1.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.material-920e743ab3cff8c3",
    "/root/.local/share/ov/data/exts/v2/isaacsim.code_editor.vscode-1.0.5",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.manipulators-3.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.gen.omap-2.0.9+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.schema-3.1.3+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.prim.fabric-fb841d13a8d5bc7e",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.light-c0c9dd171582172f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.menu.stage-1.2.5",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.extensions-8ff3785ccd1f9ba8",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.wpm-2.4.0-coreapi+lx64.r",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.bundle-d65f761458a01117",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.cortex-1.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.usd-921b807eb64516f6",
    "/root/.local/share/ov/data/exts/v2/omni.kit.menu.common-49ad4bb56d5ceabc",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.adapter.fabric-3582f48a80fd32be",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.settings-870c57923e65adbf",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot_motion.lula_test_widget-1.0.5",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.lula_test_widget-1.0.2",
    "/root/.local/share/ov/data/exts/v2/isaacsim.ros2.tf_viewer-2.0.3",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.selection-a906b77fe5ce3b33",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.adapter.core-44cbbb7f40a77bd6",
    "/root/.local/share/ov/data/exts/v2/omni.physx.telemetry-106.5.7+106.5.0.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.cortex.framework-1.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.lula-4.0.2+106.5.0.lx64",
    "/root/.local/share/ov/data/exts/v2/index",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.importer.urdf-2.3.14+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.manipulators.examples-1.0.3",
    "/root/.local/share/ov/data/exts/v2/omni.hydra.usdrt_delegate-4b55b3d492237414",
    "/root/.local/share/ov/data/exts/v2/omni.kit.ui.actions-acf0b974c4b96115",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.scene_camera_model-3e69237ca9d1d776",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.content_browser_registry-aebf2f1a9736f90d",
    "/root/.local/share/ov/data/exts/v2/omni.debugdraw-87858c6a8a2bea99",
    "/root/.local/share/ov/data/exts/v2/omni.physx.vehicle-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.isaac-1.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.lighting-106.0.2+ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.anim.curve.core-1.2.0+106.4.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.tool.snap-a9645686ee582059",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.surface_gripper-2.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.scripting-106.5.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.tool.asset_importer-2.12.6+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.gui.menu-2.0.9+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.physx-106.5.7+106.5.0.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.core-4.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.ids-1.4.0-coreapi+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.radar-2.6.1-coreapi+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.adapter.usd-edae9214a6e5ec29",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.franka-1.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.camera-9024aa1a52a88b16",
    "/root/.local/share/ov/data/exts/v2/omni.physx.ui-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.cortex.sample_behaviors-2.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.text_editor-13b13ba4c08229a0",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.version-2.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.geometry-bc57ffe36d9efba9",
    "/root/.local/share/ov/data/exts/v2/omni.kit.mainwindow-843b2fa0b5a0d0ee",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.viewport-42d0814901f7dca9",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.core-bb2ee6fd6db4ed06",
    "/root/.local/share/ov/data/exts/v2/omni.kit.property.audio-cc2419e84d50e6de",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.cloner-1.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.tool.collect-19b1dd65c68fbe23",
    "/root/.local/share/ov/data/exts/v2/isaacsim.app.about-2.0.7",
    "/root/.local/share/ov/data/exts/v2/omni.usd.metrics.assembler.ui-106.5.0+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.file_importer-81ae0aaf5c8f3762",
    "/root/.local/share/ov/data/exts/v2/isaacsim.sensors.physx-2.2.5+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.stage-10565b94df05afe1",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.kit-2.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.ros2.urdf-1.1.8+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.graph.visualization.nodes-2.1.1",
    "/root/.local/share/ov/data/exts/v2/omni.fabric.commands-48840de5be4a23a3",
    "/root/.local/share/ov/data/exts/v2/omni.uiaudio-f66a47f4c3e5cfbf",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.toolbar-406ba9acdd411fda",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.highlight_label-04022ff081865489",
    "/root/.local/share/ov/data/exts/v2/isaacsim.gui.components-1.0.9+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.examples.browser-0.1.8",
    "/root/.local/share/ov/data/exts/v2/isaacsim.sensors.physics-0.3.6+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.wheeled_robots-4.0.4+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.searchable_combobox-1caa3b2d50de55e9",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.actions-ee8edc59e9ec5ebd",
    "/root/.local/share/ov/data/exts/v2/omni.kit.selection-2b19316293a8a137",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.common-2.5.0-coreapi+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.replicator.replicator_yaml-2.0.10+lx64",
    "/root/.local/share/ov/data/exts/v2/omni.usd.schema.forcefield-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.replicator.writers-1.0.1+lx64",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.status_bar-326c51ffe7f16964",
    "/root/.local/share/ov/data/exts/v2/omni.kit.usd.collect-4715482feaf8daeb",
    "/root/.local/share/ov/data/exts/v2/omni.kit.asset_converter-2.8.9+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/isaacsim.core.nodes-2.1.5+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.resourcemonitor-c4df9d6fc5d3b683",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.range_sensor-4.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.toolbar-86405eeb022907f5",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.prompt-754d5bd345917e1d",
    "/root/.local/share/ov/data/exts/v2/omni.kit.widget.layers-2271c8e45196b75f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.raycast.query-b8602779dbf59e12",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.console-b7e0314e0db6fb8f",
    "/root/.local/share/ov/data/exts/v2/omni.physx.supportui-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.replicator.examples-1.1.2+lx64",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.utils-2.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.nv.materials-1.4.0-coreapi+lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.file-73395ed679b675b2",
    "/root/.local/share/ov/data/exts/v2/omni.kit.window.content_browser-305d07c6817be3cb",
    "/root/.local/share/ov/data/exts/v2/omni.kit.browser.folder.core-1.10.1",
    "/root/.local/share/ov/data/exts/v2/omni.ui_query-bab2945db9bda927",
    "/root/.local/share/ov/data/exts/v2/isaacsim.gui.property-1.0.4+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.camera-8df455875e5d3301",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.menu-1.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot.surface_gripper-2.0.6+106.5.0.lx64",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.render-b68b634b00aa3626",
    "/root/.local/share/ov/data/exts/v2/omni.physx.demos-106.5.7+106.5.0.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.viewport.menubar.display-f09595d953b61ca6",
    "/root/.local/share/ov/data/exts/v2/omni.kit.ui_test-46944f10c5f896b1",
    "/root/.local/share/ov/data/exts/v2/omni.physx.bundle-106.5.7+106.5.0.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.robot_motion.motion_generation-8.0.6",
    "/root/.local/share/ov/data/exts/v2/cache_db.json",
    "/root/.local/share/ov/data/exts/v2/omni.usd.metrics.assembler-106.5.0+106.5.0.lx64.r.cp310",
    "/root/.local/share/ov/data/exts/v2/omni.usdphysics.ui-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.gen.omap.ui-2.0.4+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.prim.core-26bf227cbbe692ff",
    "/root/.local/share/ov/data/exts/v2/omni.kit.manipulator.prim-22da3596fd9e308e",
    "/root/.local/share/ov/data/exts/v2/isaacsim.core.throttling-2.0.2",
    "/root/.local/share/ov/data/exts/v2/omni.rtx.window.settings-642808d057f6bdb0",
    "/root/.local/share/ov/data/exts/v2/omni.sensors.tiled-0.0.6+106.1.0.lx64.r",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.core_nodes-2.0.2+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.motion_generation-8.0.2",
    "/root/.local/share/ov/data/exts/v2/isaacsim.asset.exporter.urdf-1.1.3+106.5.0.lx64",
    "/root/.local/share/ov/data/exts/v2/omni.isaac.nucleus-1.0.3+106.5.0",
    "/root/.local/share/ov/data/exts/v2/omni.usd.schema.omniscripting-21b1085e443257c3",
    "/root/.local/share/ov/data/exts/v2/omni.physx.commands-106.5.7+106.5.0.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.physx.graph-106.5.7+106.5.0.lx64.r.cp310.ub3f",
    "/root/.local/share/ov/data/exts/v2/omni.kit.browser.core-2.3.11",
]
