[project]
name = "taser"
version = "0.1.0"
description = "A wheeled robot with two arms that detects targets in an environment and moves towards them to catch them."
authors = [{ "name" = "Khaled Jalloul", email = "khaled.jalloul@hotmail.com" }]

dependencies = [
    "cvxpy==1.4.2",
    "dotenv",
    "matplotlib",
    "numpy==1.24.0",
    "onnxruntime",
    "pybind11",
    "pyqt6",
    "roboticstoolbox-python==1.1.1",
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/taser"]
cmake.source-dir = "src/taser_cpp"

[tool.ruff]
select = [
    "I", # Import order & style
    "F", # Unused imports, undefined vars, etc.
]

[tool.pyright]
typeCheckingMode = "off"
reportUnusedImport = false # Already handled by ruff

extraPaths = [
    # System site-packages
    "/usr/local/lib/python3.10/dist-packages",
    # Isaac Lab
    "/workspace/isaaclab/source/isaaclab_tasks",
    "/workspace/isaaclab/source/isaaclab_assets",
    "/workspace/isaaclab/source/isaaclab_rl",
    "/workspace/isaaclab/source/isaaclab",
    "/workspace/isaaclab/source/isaaclab_mimic",
    # Isaac Sim
    "/isaac-sim/exts/isaacsim.robot_setup.gain_tuner",
    "/isaac-sim/exts/isaacsim.core.deprecation_manager",
    "/isaac-sim/exts/isaacsim.robot.schema",
    "/isaac-sim/exts/isaacsim.robot.wheeled_robots",
    "/isaac-sim/exts/isaacsim.util.physics",
    "/isaac-sim/exts/isaacsim.test.utils",
    "/isaac-sim/exts/isaacsim.robot_setup.wizard",
    "/isaac-sim/exts/isaacsim.simulation_app",
    "/isaac-sim/exts/isaacsim.replicator.mobility_gen.ui",
    "/isaac-sim/exts/isaacsim.robot.surface_gripper",
    "/isaac-sim/exts/isaacsim.gui.content_browser",
    "/isaac-sim/exts/omni.pip.cloud",
    "/isaac-sim/exts/isaacsim.robot.policy.examples",
    "/isaac-sim/exts/isaacsim.replicator.grasping",
    "/isaac-sim/exts/isaacsim.robot_setup.xrdf_editor",
    "/isaac-sim/exts/isaacsim.robot_setup.grasp_editor",
    "/isaac-sim/exts/omni.kit.loop-isaac",
    "/isaac-sim/exts/isaacsim.replicator.behavior",
    "/isaac-sim/exts/isaacsim.replicator.examples",
    "/isaac-sim/exts/isaacsim.ros2.urdf",
    "/isaac-sim/exts/isaacsim.sensors.physics",
    "/isaac-sim/exts/isaacsim.replicator.behavior.ui",
    "/isaac-sim/exts/isaacsim.core.experimental.utils",
    "/isaac-sim/exts/isaacsim.sensors.camera.ui",
    "/isaac-sim/exts/isaacsim.asset.exporter.urdf",
    "/isaac-sim/exts/isaacsim.replicator.grasping.ui",
    "/isaac-sim/exts/isaacsim.asset.gen.conveyor",
    "/isaac-sim/exts/isaacsim.core.includes",
    "/isaac-sim/exts/isaacsim.core.experimental.prims",
    "/isaac-sim/exts/isaacsim.asset.gen.conveyor.ui",
    "/isaac-sim/exts/isaacsim.replicator.mobility_gen.examples",
    "/isaac-sim/exts/isaacsim.gui.sensors.icon",
    "/isaac-sim/exts/isaacsim.sensors.physics.ui",
    "/isaac-sim/exts/isaacsim.app.about",
    "/isaac-sim/exts/isaacsim.replicator.domain_randomization",
    "/isaac-sim/exts/isaacsim.storage.native",
    "/isaac-sim/exts/isaacsim.core.throttling",
    "/isaac-sim/exts/isaacsim.test.docstring",
    "/isaac-sim/exts/isaacsim.sensors.rtx.ui",
    "/isaac-sim/exts/isaacsim.sensors.physics.examples",
    "/isaac-sim/exts/isaacsim.sensors.physx",
    "/isaac-sim/exts/omni.pip.compute",
    "/isaac-sim/exts/isaacsim.examples.ui",
    "/isaac-sim/exts/isaacsim.robot.wheeled_robots.ui",
    "/isaac-sim/exts/isaacsim.code_editor.vscode",
    "/isaac-sim/exts/isaacsim.asset.importer.urdf",
    "/isaac-sim/exts/isaacsim.core.simulation_manager",
    "/isaac-sim/exts/isaacsim.benchmark.examples",
    "/isaac-sim/exts/isaacsim.replicator.synthetic_recorder",
    "/isaac-sim/exts/isaacsim.app.selector",
    "/isaac-sim/exts/isaacsim.asset.gen.omap",
    "/isaac-sim/exts/isaacsim.sensors.physx.ui",
    "/isaac-sim/exts/isaacsim.robot_setup.assembler",
    "/isaac-sim/exts/isaacsim.robot_motion.lula",
    "/isaac-sim/exts/isaacsim.asset.gen.omap.ui",
    "/isaac-sim/exts/isaacsim.examples.extension",
    "/isaac-sim/exts/isaacsim.ros2.sim_control",
    "/isaac-sim/exts/isaacsim.test.collection",
    "/isaac-sim/exts/isaacsim.cortex.behaviors",
    "/isaac-sim/exts/isaacsim.util.camera_inspector",
    "/isaac-sim/exts/isaacsim.asset.browser",
    "/isaac-sim/exts/isaacsim.sensors.physx.examples",
    "/isaac-sim/exts/isaacsim.gui.components",
    "/isaac-sim/exts/omni.isaac.ml_archive",
    "/isaac-sim/exts/isaacsim.sensors.camera",
    "/isaac-sim/exts/isaacsim.gui.property",
    "/isaac-sim/exts/isaacsim.core.utils",
    "/isaac-sim/exts/isaacsim.asset.importer.heightmap",
    "/isaac-sim/exts/isaacsim.examples.interactive",
    "/isaac-sim/exts/isaacsim.ros2.bridge",
    "/isaac-sim/exts/isaacsim.ros2.bridge/jazzy/rclpy",
    "/isaac-sim/exts/isaacsim.core.nodes",
    "/isaac-sim/exts/isaacsim.util.merge_mesh",
    "/isaac-sim/exts/isaacsim.asset.importer.mjcf",
    "/isaac-sim/exts/isaacsim.robot_motion.lula_test_widget",
    "/isaac-sim/exts/isaacsim.core.experimental.materials",
    "/isaac-sim/exts/isaacsim.code_editor.jupyter",
    "/isaac-sim/exts/isaacsim.replicator.writers",
    "/isaac-sim/exts/isaacsim.core.prims",
    "/isaac-sim/exts/isaacsim.robot.manipulators.examples",
    "/isaac-sim/exts/isaacsim.gui.menu",
    "/isaac-sim/exts/isaacsim.core.experimental.objects",
    "/isaac-sim/exts/isaacsim.benchmark.services",
    "/isaac-sim/exts/omni.isaac.core_archive",
    "/isaac-sim/exts/isaacsim.robot.manipulators",
    "/isaac-sim/exts/isaacsim.ros2.tf_viewer",
    "/isaac-sim/exts/isaacsim.core.cloner",
    "/isaac-sim/exts/isaacsim.robot.surface_gripper.ui",
    "/isaac-sim/exts/isaacsim.core.api",
    "/isaac-sim/exts/isaacsim.asset.validation",
    "/isaac-sim/exts/isaacsim.sensors.rtx",
    "/isaac-sim/exts/isaacsim.robot.manipulators.ui",
    "/isaac-sim/exts/isaacsim.robot_motion.motion_generation",
    "/isaac-sim/exts/isaacsim.examples.browser",
    "/isaac-sim/exts/isaacsim.cortex.framework",
    "/isaac-sim/exts/isaacsim.app.setup",
    "/isaac-sim/exts/isaacsim.core.version",
    "/isaac-sim/exts/isaacsim.replicator.mobility_gen",
    "/isaac-sim/extsDeprecated/omni.isaac.ros2_bridge.robot_description",
    "/isaac-sim/extsDeprecated/omni.exporter.urdf",
    "/isaac-sim/extsDeprecated/omni.isaac.robot_description_editor",
    "/isaac-sim/extsDeprecated/omni.replicator.isaac",
    "/isaac-sim/extsDeprecated/omni.isaac.range_sensor.examples",
    "/isaac-sim/extsDeprecated/omni.isaac.extension_templates",
    "/isaac-sim/extsDeprecated/omni.isaac.quadruped",
    "/isaac-sim/extsDeprecated/omni.isaac.cloner",
    "/isaac-sim/extsDeprecated/omni.kit.property.isaac",
    "/isaac-sim/extsDeprecated/omni.isaac.jupyter_notebook",
    "/isaac-sim/extsDeprecated/isaacsim.replicator.scene_blox",
    "/isaac-sim/extsDeprecated/omni.isaac.wheeled_robots",
    "/isaac-sim/extsDeprecated/omni.isaac.grasp_editor",
    "/isaac-sim/extsDeprecated/omni.isaac.conveyor",
    "/isaac-sim/extsDeprecated/omni.isaac.lula_test_widget",
    "/isaac-sim/extsDeprecated/omni.isaac.proximity_sensor",
    "/isaac-sim/extsDeprecated/omni.isaac.cortex.sample_behaviors",
    "/isaac-sim/extsDeprecated/omni.isaac.app.selector",
    "/isaac-sim/extsDeprecated/omni.isaac.examples_nodes",
    "/isaac-sim/extsDeprecated/omni.isaac.surface_gripper.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.gain_tuner",
    "/isaac-sim/extsDeprecated/omni.isaac.doctest",
    "/isaac-sim/extsDeprecated/omni.isaac.occupancy_map.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.lula",
    "/isaac-sim/extsDeprecated/omni.isaac.scene_blox",
    "/isaac-sim/extsDeprecated/omni.isaac.app.setup",
    "/isaac-sim/extsDeprecated/omni.isaac.manipulators.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.version",
    "/isaac-sim/extsDeprecated/omni.isaac.occupancy_map",
    "/isaac-sim/extsDeprecated/omni.isaac.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.conveyor.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.cortex",
    "/isaac-sim/extsDeprecated/omni.isaac.dynamic_control",
    "/isaac-sim/extsDeprecated/omni.isaac.merge_mesh",
    "/isaac-sim/extsDeprecated/omni.isaac.examples",
    "/isaac-sim/extsDeprecated/omni.isaac.debug_draw",
    "/isaac-sim/extsDeprecated/omni.isaac.articulation_inspector",
    "/isaac-sim/extsDeprecated/omni.isaac.wheeled_robots.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.motion_generation",
    "/isaac-sim/extsDeprecated/omni.isaac.core_nodes",
    "/isaac-sim/extsDeprecated/omni.isaac.tests",
    "/isaac-sim/extsDeprecated/omni.isaac.range_sensor.ui",
    "/isaac-sim/extsDeprecated/omni.isaac.universal_robots",
    "/isaac-sim/extsDeprecated/omni.isaac.tf_viewer",
    "/isaac-sim/extsDeprecated/omni.isaac.benchmarks",
    "/isaac-sim/extsDeprecated/omni.isaac.synthetic_recorder",
    "/isaac-sim/extsDeprecated/omni.isaac.robot_assembler",
    "/isaac-sim/extsDeprecated/omni.isaac.asset_browser",
    "/isaac-sim/extsDeprecated/omni.isaac.menu",
    "/isaac-sim/extsDeprecated/omni.isaac.unit_converter",
    "/isaac-sim/extsDeprecated/omni.isaac.franka",
    "/isaac-sim/extsDeprecated/omni.isaac.assets_check",
    "/isaac-sim/extsDeprecated/omni.isaac.core",
    "/isaac-sim/extsDeprecated/omni.isaac.common_includes",
    "/isaac-sim/extsDeprecated/omni.isaac.window.about",
    "/isaac-sim/extsDeprecated/omni.isaac.ros2_bridge",
    "/isaac-sim/extsDeprecated/omni.isaac.physics_utilities",
    "/isaac-sim/extsDeprecated/omni.isaac.camera_inspector",
    "/isaac-sim/extsDeprecated/omni.isaac.kit",
    "/isaac-sim/extsDeprecated/omni.isaac.throttling",
    "/isaac-sim/extsDeprecated/omni.isaac.manipulators",
    "/isaac-sim/extsDeprecated/omni.isaac.range_sensor",
    "/isaac-sim/extsDeprecated/omni.isaac.vscode",
    "/isaac-sim/extsDeprecated/omni.isaac.ui_template",
    "/isaac-sim/extsDeprecated/omni.isaac.surface_gripper",
    "/isaac-sim/extsDeprecated/omni.isaac.utils",
    "/isaac-sim/extsDeprecated/omni.isaac.sensor",
    "/isaac-sim/extsDeprecated/omni.isaac.benchmark.services",
    "/isaac-sim/extsDeprecated/omni.usd.schema.isaac",
    "/isaac-sim/extsDeprecated/omni.isaac.block_world",
    "/isaac-sim/extsDeprecated/omni.isaac.nucleus",
    "/isaac-sim/extsDeprecated/omni.isaac.physics_inspector",
    "/isaac-sim/kit/extscore/omni.client.lib",
    "/isaac-sim/kit/extscore/omni.kit.async_engine",
    "/isaac-sim/kit/extscore/omni.kit.registry.nucleus",
]
